# SysTorch-0.5.5

./: .clang-format  .gitignore  .yarnrc  CHANGELOG.md  CMakeLists.txt  README.md  cross.cmake  package.json
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
Core/: CMakeLists.txt  DS2431.c  DS2431.h  DS2484.c  DS2484.h  TestBoard.c  TestBoard.h  data.c  data_handler_parameter.c  data_handler_parameter.h  datatypes.h  dma.c  dma.h  errors.c  errors.h  ewconfig.h  ewmain.c  ewmain.h  fdcan2.c  fdcan2.h  gData.h  gError.h  gpio.c  gpio.h  gui.c  gui.h  i2c.c  i2c.h  init.c  init.h  inout.c  inout.h  iwdg.c  iwdg.h  main.c  main.h  msg.c  msg.h  serial.c  serial.h  (+13 more)
Core/Startup/: CMakeLists.txt  STM32G473RE_flash.lds  TC22_G473MCY6.lds  TC22_G473MCY6_mapping_fwimg.ld  TC22_G473MCY6_mapping_sbsfu.ld  bootloader_util.c  bootloader_util.h  system_stm32g4xx_BL.c
Core/TargetSpecific/: CMakeLists.txt  ew_bsp_clock.c  ew_bsp_console.c  ew_bsp_display.c  ew_bsp_event.c  ew_bsp_flash_reader.c  ew_bsp_flash_reader.h  ew_bsp_inout.c  ew_bsp_inout.h  ew_bsp_system.c  ew_bsp_touch.c
Core/TargetSpecific/Drivers/: DisplayDriver.c  DisplayDriver.h  SpiFlashDriver.c  SpiFlashDriver.h
Drivers/: CMakeLists.txt
Drivers/PlatformPackage/RGB565/: CMakeLists.txt  ewextbmp_RGB565.c  ewextfnt.c  ewextpxl_RGB565.c  ewgfx.c  ewgfx.inc  ewgfxattrtext.c  ewgfxbidi.c  ewgfxcore.c  ewgfxdriver.c  ewgfxtasks.c
Drivers/PlatformPackage/RTE/: CMakeLists.txt  ewcolor.c  ewdebug.c  ewextrte.c  ewheap.c  ewobject.c  ewpoint.c  ewrect.c  ewref.c  ewresource.c  ewrte.inc  ewscalars.c  ewslot.c  ewstring.c  ewtimer.c
EwProjekt/: Application.ewu  CAN_info.ewu  Data.ewu  Parameter.ewu  Res.ewu  STM32G4.ewp  STM32G4.ews  Simulator.ewu
EwProjekt/Doc/: Prototyper Tasten
EwProjekt/Res/: Info.txt
GeneratedCode/: Application.c  Application.h  CAN_info.c  CAN_info.h  CMakeLists.txt  Core.c  Core.h  Data.c  Data.h  Effects.c  Effects.h  Graphics.c  Graphics.h  Parameter.c  Parameter.h  Res.c  Res.h  Resources.c  Resources.h  Simulator.c  Simulator.h  Templates.c  Templates.h  Views.c  Views.h  WidgetSet.c  WidgetSet.h  _ApplicationApplication.h  _ApplicationDeviceClass.h  _ApplicationFontSmall.h  _ApplicationIconFunction.h  _ApplicationIconLoad.h  _ApplicationIconParameter.h  _ApplicationIconValueBarEmpty.h  _ApplicationIconValueBarFilled.h  _ApplicationParamBase.h  _ApplicationParamDialog.h  _ApplicationParamQAIndicator.h  _ApplicationParamToggle.h  _ApplicationParamValue.h  (+80 more)
